--- a/.eslintignore
+++ b/.eslintignore
@@ -10,6 +10,8 @@
 
 # production
 /build
+/dist
+/docs
 
 # misc
 .DS_Store
@@ -23,6 +25,5 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-lock.yaml
 
-/dist/
 !.*.json
 !.*
