--- a/package.json
+++ b/package.json
@@ -10,13 +10,30 @@
 		"dist"
 	],
 	"scripts": {
-		"start": "react-scripts start",
-		"build-examples": "react-scripts build",
+		"start": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts start",
+		"build": "rimraf dist && cross-env NODE_ENV=production babel src/lib --out-dir dist --copy-files --no-copy-ignored --extensions '.js,.json,.ts,.tsx,.snap'",
+		"build:docs": "cross-env BUILD_PATH='./docs' GENERATE_SOURCEMAP=false react-scripts build",
 		"test": "react-scripts test --env=jsdom --coverage",
 		"eject": "react-scripts eject",
-		"prebuild": "rimraf dist",
-		"build": "cross-env NODE_ENV=production babel src/lib --out-dir dist --copy-files",
-		"lint": "esw . --ext .js,.json,.eslintrc,.babelrc --changed -w --fix"
+		"lint": "esw . --ext .js,.json,.*rc --changed",
+		"commit": "npm run lint -- --fix && npm run test -- --watchAll=false && npm run build && npm run build:docs && git add . && git commit -m",
+		"push": "npm version patch && git push --follow-tags"
+	},
+	"dependencies": {
+		"@dwidge/lib": "github:dwidge/lib",
+		"@dwidge/lib-react": "github:dwidge/lib-react",
+		"prop-types": "^15.8.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-scripts": "^5.0.1"
+	},
+	"peerDependencies": {
+		"@dwidge/lib": "github:dwidge/lib",
+		"@dwidge/lib-react": "github:dwidge/lib-react",
+		"prop-types": "^15.8.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-scripts": "^5.0.1"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.18.9",
@@ -35,20 +52,18 @@
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-react": "^7.30.0",
 		"eslint-watch": "^8.0.0",
-		"prop-types": "^15.8.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-scripts": "^5.0.1",
-		"rimraf": "^3.0.2",
-		"@dwidge/lib": "github:dwidge/lib",
-		"@dwidge/lib-react": "github:dwidge/lib-react"
+		"rimraf": "^3.0.2"
 	},
-	"peerDependencies": {
-		"@dwidge/lib": "github:dwidge/lib",
-		"@dwidge/lib-react": "github:dwidge/lib-react",
-		"prop-types": "^15.8.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-scripts": "^5.0.1"
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
