--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"lint": "esw . --ext .js,.json,.*rc --changed",
-		"commit": "npm run lint -- --fix && npm run test -- --watchAll=false && npm run build && npm run build:docs && git add . && git commit -m",
+		"commit": "npm run lint -- --fix && npm run test -- --watchAll=false && npm run build && git add . && git commit -m",
 		"push": "npm version patch && git push --follow-tags"
 	},
 	"dependencies": {
