--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "^5.0.1",
+		"react-bootstrap": "^2.5.0",
 		"use-file-picker": "^1.5.0"
 	},
 	"peerDependencies": {
@@ -36,7 +37,8 @@
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-scripts": "^5.0.1"
+		"react-scripts": "^5.0.1",
+		"react-bootstrap": "^2.5.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.18.9",
