--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
 		"file-saver": "^2.0.5",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
+		"react-bootstrap": "^2.5.0",
+		"react-bootstrap-typeahead": "^6.0.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "^5.0.1",
-		"react-bootstrap": "^2.5.0",
 		"use-file-picker": "^1.5.0"
 	},
 	"peerDependencies": {
@@ -36,9 +37,9 @@
 		"@dwidge/lib-react": "github:dwidge/lib-react",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
+		"react-bootstrap": "^2.5.0",
 		"react-dom": "^18.2.0",
-		"react-scripts": "^5.0.1",
-		"react-bootstrap": "^2.5.0"
+		"react-scripts": "^5.0.1"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.18.9",
