--- a/package.json
+++ b/package.json
@@ -1,75 +1,51 @@
 {
-	"name": "@dwidge/table-react",
-	"version": "0.1.20",
-	"license": "Apache-2.0",
-	"main": "./dist/index.js",
-	"exports": {
-		".": "./dist/index.js"
-	},
-	"files": [
-		"dist"
-	],
-	"scripts": {
-		"start": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts start",
-		"build": "rimraf dist && cross-env NODE_ENV=production babel src/lib --out-dir dist --copy-files --no-copy-ignored --extensions '.js,.json,.ts,.tsx,.snap'",
-		"build:docs": "cross-env BUILD_PATH='./docs' GENERATE_SOURCEMAP=false react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject",
-		"lint": "esw . --ext .js,.json,.*rc --changed",
-		"commit": "npm run lint -- --fix && npm run test -- --watchAll=false && npm run build && git add . && git commit -m",
-		"push": "npm version patch && git push --follow-tags"
-	},
-	"dependencies": {
-		"@dwidge/lib": "github:dwidge/lib",
-		"@dwidge/lib-react": "github:dwidge/lib-react",
-		"date-fns": "^2.28.0",
-		"file-saver": "^2.0.5",
-		"prop-types": "^15.8.1",
-		"react": "^18.2.0",
-		"react-bootstrap": "^2.5.0",
-		"react-bootstrap-typeahead": "^6.0.0",
-		"react-dom": "^18.2.0",
-		"react-scripts": "^5.0.1",
-		"use-file-picker": "^1.5.0"
-	},
-	"peerDependencies": {
-		"@dwidge/lib": "github:dwidge/lib",
-		"@dwidge/lib-react": "github:dwidge/lib-react",
-		"prop-types": "^15.8.1",
-		"react": "^18.2.0",
-		"react-bootstrap": "^2.5.0",
-		"react-dom": "^18.2.0",
-		"react-scripts": "^5.0.1"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.18.9",
-		"@babel/core": "^7.18.6",
-		"@babel/preset-env": "^7.18.6",
-		"@babel/preset-react": "^7.18.6",
-		"@testing-library/react": "^13.3.0",
-		"@testing-library/user-event": "^14.2.3",
-		"babel-preset-react-app": "^10.0.1",
-		"cross-env": "^5.2.1",
-		"eslint": "^8.0.1",
-		"eslint-config-standard": "^17.0.0",
-		"eslint-plugin-import": "^2.25.2",
-		"eslint-plugin-jsonc": "^2.3.1",
-		"eslint-plugin-n": "^15.0.0",
-		"eslint-plugin-promise": "^6.0.0",
-		"eslint-plugin-react": "^7.30.0",
-		"eslint-watch": "^8.0.0",
-		"rimraf": "^3.0.2"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "@dwidge/table-react",
+  "version": "0.2.0",
+  "license": "BSL-1.0",
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "files": [
+    "dist",
+    "lib"
+  ],
+  "scripts": {
+    "prepare": "tsc",
+    "start": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts start",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "esw . --ext .js,.json,.*rc --changed"
+  },
+  "peerDependencies": {
+    "@dwidge/lib": "github:dwidge/lib",
+    "@dwidge/lib-react": "github:dwidge/lib-react",
+    "date-fns": "^2.28.0",
+    "file-saver": "^2.0.5",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-bootstrap-typeahead": "^6.0.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "use-file-picker": "^1.5.0"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.3",
+    "cross-env": "^5.2.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^5.2.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
